Added boilerplate for HTML and CSS

--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+* {
+    box-sizing: border-box;
+}
+
+@media (min-width: 800px) {  
+    :root {
+       --fs-h1: 4.5rem;
+       --fs-h2: 3.75rem;
+       --fs-h3: 1.5rem;
+       --fs-body: 1.125rem;
+    }
+}
+
+
+body {
+    
+}
+
 
 h1 {
     background-color: blue;
